--- a/prms-frontend/package.json
+++ b/prms-frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.9.0",
     "chart.js": "^4.5.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.24",
     "leaflet": "^1.9.4",
     "leaflet.markercluster": "^1.5.3",
     "react": "^19.1.0",
