feat: Add Hostinger VPS deployment guide and secure config setup

--- a/.gitignore
+++ b/.gitignore
@@ -83,6 +83,7 @@ debug_*.php
 # Configuration files with sensitive data
 config.local.php
 database.local.php
+prms-backend/config.php
 
 # React/Vite specific
 .vite/
