--- a/prms-frontend/package.json
+++ b/prms-frontend/package.json
@@ -17,12 +17,14 @@
     "framer-motion": "^12.23.24",
     "leaflet": "^1.9.4",
     "leaflet.markercluster": "^1.5.3",
+    "plotly.js-dist-min": "^3.1.2",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-leaflet-markercluster": "^5.0.0-rc.0",
+    "react-plotly.js": "^2.6.0",
     "react-router-dom": "^7.6.0",
     "recharts": "^2.15.3"
   },
