--- a/prms-frontend/.env.example
+++ b/prms-frontend/.env.example
@@ -1,10 +1,5 @@
-﻿# API Configuration
-# Copy this file to .env and update the values
+﻿# PRMS Frontend Environment Configuration - Template
+# Copy to .env and update with your values
 
-# For LOCAL development (Laragon)
-VITE_API_BASE_URL=http://localhost/prms/prms-backend
-VITE_STAFF_API_BASE_URL=http://localhost/prms/prms-backend/api/staff
-
-# For PRODUCTION deployment on VPS, change to:
-# VITE_API_BASE_URL=https://yourdomain.com/prms-backend
-# VITE_STAFF_API_BASE_URL=https://yourdomain.com/prms-backend/api/staff
+VITE_API_BASE_URL=http://YOUR-VPS-IP/prms-backend
+VITE_STAFF_API_BASE_URL=http://YOUR-VPS-IP/prms-backend/api/staff
