lala deploy guide

--- a/prms-frontend/.env.example
+++ b/prms-frontend/.env.example
@@ -1,10 +1,3 @@
-﻿# PRMS Frontend Environment Configuration - Template
-# Copy to .env and update with your values
-
-# VITE_API_BASE_URL=http://YOUR-VPS-IP/prms-backend
-# VITE_STAFF_API_BASE_URL=http://YOUR-VPS-IP/prms-backend/api/staff
-
-# For local Docker Compose setup
-# VITE_API_BASE_URL=http://backend:80/prms-backend
-# VITE_STAFF_API_BASE_URL=http://backend:80/prms-backend/api/staff
-
+﻿#VITE_API_BASE_URL=http://72.61.148.144/prms-backend
+#VITE_STAFF_API_BASE_URL=http://72.61.148.144/prms-backend/api/staff
+#VITE_BASE_PATH=/
