--- a/prms-frontend/.env.example
+++ b/prms-frontend/.env.example
@@ -1,3 +1,3 @@
-﻿#VITE_API_BASE_URL=http://72.61.148.144/prms-backend
-#VITE_STAFF_API_BASE_URL=http://72.61.148.144/prms-backend/api/staff
-#VITE_BASE_PATH=/
+﻿#uncomment
+#VITE_API_BASE_URL=/prms-backend
+#VITE_STAFF_API_BASE_URL=/prms-backend/api/staff
