--- a/prms-frontend/nginx.conf
+++ b/prms-frontend/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name 72.61.148.144;
     root /usr/share/nginx/html;
     index index.html;
 
