--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,7 @@ services:
       - DB_NAME=${DB_NAME:-prms_db}
       - DB_USER=${DB_USER:-prms_user}
       - DB_PASSWORD=${DB_PASSWORD:-prms_pass_2024}
+      - FORECASTING_DIR=/var/www/forecasting
     depends_on:
       db:
         condition: service_healthy
