--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,14 +35,19 @@ services:
       - ./forecasting:/var/www/forecasting
       - backend_uploads:/var/www/html/uploads
       - backend_logs:/var/www/html/logs
+      - backend_backups:/var/www/html/backups
       - forecast_cache:/var/www/forecasting/cache
       - php_sessions:/tmp
+      - /var/run/docker.sock:/var/run/docker.sock  # Allow docker exec commands
     environment:
       - DB_HOST=db
       - DB_NAME=${DB_NAME:-prms_db}
       - DB_USER=${DB_USER:-prms_user}
       - DB_PASSWORD=${DB_PASSWORD:-prms_pass_2024}
       - FORECASTING_DIR=/var/www/forecasting
+      - BACKUP_DIR=/var/www/html/backups
+      - DB_CONTAINER_NAME=prms-db
+      - DB_ROOT_PASSWORD=${DB_ROOT_PASSWORD:-prms_root_2024}
     depends_on:
       db:
         condition: service_healthy
@@ -113,6 +118,8 @@ volumes:
   backend_uploads:
     driver: local
   backend_logs:
+    driver: local
+  backend_backups:
     driver: local
   forecast_cache:
     driver: local
