--- a/env.docker.example
+++ b/env.docker.example
@@ -4,3 +4,12 @@ DB_NAME=prms_db
 DB_USER=prms_user
 DB_PASSWORD=prms_pass_2024
 
+# Email Configuration for Password Reset (PHPMailer)
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USERNAME=your-email@gmail.com
+SMTP_PASSWORD=your-app-password
+SMTP_ENCRYPTION=tls
+FROM_EMAIL=your-email@gmail.com
+FROM_NAME=PRMS System
+
