--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,6 +48,14 @@ services:
       - BACKUP_DIR=/var/www/html/backups
       - DB_CONTAINER_NAME=prms-db
       - DB_ROOT_PASSWORD=${DB_ROOT_PASSWORD:-prms_root_2024}
+      # Email Configuration for Password Reset
+      - SMTP_HOST=${SMTP_HOST:-smtp.gmail.com}
+      - SMTP_PORT=${SMTP_PORT:-587}
+      - SMTP_USERNAME=${SMTP_USERNAME:-}
+      - SMTP_PASSWORD=${SMTP_PASSWORD:-}
+      - SMTP_ENCRYPTION=${SMTP_ENCRYPTION:-tls}
+      - FROM_EMAIL=${FROM_EMAIL:-noreply@prms.local}
+      - FROM_NAME=${FROM_NAME:-PRMS System}
     depends_on:
       db:
         condition: service_healthy
